fix navbar overlap issue

--- a/nonCommercial/css/agency.css
+++ b/nonCommercial/css/agency.css
@@ -494,6 +494,15 @@ section h3.section-subheading {
 }
 
 @media (min-width: 768px) {
+
+    .logoClass{
+        height: 35px;
+        width: 140px;
+    }
+    .nav > li{
+        font-size: 10px;
+    }
+
     #location > h2{
         margin-top: 5%;
     }
@@ -535,10 +544,9 @@ section h3.section-subheading {
     }
 }
 @media (min-width: 992px) {
-    .logoClass{
-        height: 45px;
-        width: 275px;
-        margin-top: -5px;
+
+    .nav > li{
+        font-size: 14px;
     }
 
     .aboutImage{
@@ -589,6 +597,12 @@ section h3.section-subheading {
 
 @media (min-width: 1200px) {
 
+    .logoClass{
+        height: 45px;
+        width: 275px;
+        margin-top: -5px;
+    }
+
     #theKnot{
         height: 45%;
         width: 70%;
@@ -637,42 +651,6 @@ section h3.section-subheading {
     .navbar-brand > .logoClass{
         padding-top: -10px;
         padding-bottom: 10px;
-    }
-    .timeline > li {
-        min-height: 150px;
-    }
-    .timeline > li .timeline-panel {
-        padding: 0 20px 20px;
-    }
-    .timeline > li .timeline-image {
-        width: 150px;
-        height: 150px;
-        margin-left: -75px;
-    }
-    .timeline > li .timeline-image h4 {
-        font-size: 18px;
-        margin-top: 30px;
-        line-height: 26px;
-    }
-    .timeline > li.timeline-inverted > .timeline-panel {
-        padding: 0 20px 20px;
-    }
-    .timeline > li {
-        min-height: 170px;
-    }
-    .timeline > li .timeline-panel {
-        padding: 0 20px 20px 100px;
-    }
-    .timeline > li .timeline-image {
-        width: 170px;
-        height: 170px;
-        margin-left: -85px;
-    }
-    .timeline > li .timeline-image h4 {
-        margin-top: 40px;
-    }
-    .timeline > li.timeline-inverted > .timeline-panel {
-        padding: 0 100px 20px 20px;
     }
 }
 .team-member {
